JJYCS/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ysc-lms
  labels:
    name: ysc-lms
    environment: production
